# dl_summer

./: .gitignore  pyproject.toml  readme.md  tf_cuda_installed.py
notebooks/: 00_python_start.ipynb
notebooks/1 machin learning basics/: iris_exercise.ipynb  iris_tensorflow.ipynb  mnist_digits_tf.ipynb
src/: tf_cuda_installed.py
